# teiko-technical

./: .gitignore  Dockerfile  Makefile  README.md  analysis.py  flake.nix  load_data.py  logging_config.py  models.py  pyproject.toml
.devcontainer/: devcontainer.json
loblaw/: analysis.py  db.py  figures.py  loader.py  models.py  queries.py  reports.py
loblaw/dashboard/: app.py  data_overview.py  splash.py  treatment_response.py  treatment_subset_analysis.py
loblaw/tests/: conftest.py  test_load_data.py
reports/: cell_counts_summary.csv  melanoma_male_responder_baseline_b_cell_average.txt  part2_metadata.csv  part3_miraclib_pbmc_response_cell_frequencies.csv  part3_population_response_statistics.csv  part4_baseline_miraclib_melanoma_pbmc_samples.csv  part4_subjects_by_response.csv
tests/: conftest.py  test_load_data.py
