[project]
name = "teiko-technical"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[tool.setuptools.packages.find]
exclude = ["reports*"]
include = ["loblaw*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["loblaw/tests"]

